<resources>

    <string name="app_name">心域v2.1线性版</string>
    <string name="app_name_alpha">心域(收集数据版)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="show">显示</string>
    <string name="heartrate_unit" translatable="false">bpm</string>
    <string name="measure_rate_result_error" translatable="false">_ _ _</string>

    <string name="measure_btn_start">Start</string>
    <string name="measure_btn_save">Save</string>
    <string name="measure_btn_fail">Retry</string>
    <string name="history_title">History</string>
    <string name="fatigue_tip">系统利用心率变异性中交感神经与副交感神经的协调性作为判断用户疲劳度的标准，若疲劳度>80时，应进行适当休息。</string>
    <string name="heartrate_tip">心率是指正常人安静状态下每分钟心跳的次数，也叫安静心率，一般为60-100次/分，可因年龄、性别或其他生理因素产生个体差异。一般来说，年龄越小，心率越快，老年人心跳比年轻人慢，女性的心率比同龄男性快，这些都是正常的生理现象。安静状态下，成人正常心率为60～100次/分钟，理想心率应为55～70次/分钟。
</string>
    <string name="blood_oxy_tip" formatted="false">血氧饱和度(SpO2)是血液中被氧结合的氧合血红蛋白(HbO2)的容量占全部可结合的血红蛋白(Hb，hemoglobin)容量的百分比，即血液中血氧的浓度。一般认为血氧饱和度不应低于94%，低于90%时即为低氧，需进行观察治疗。
</string>
    <string name="af_tip" formatted="false">心房颤动是一种常见的快速心律失常，60岁以上的人有1%出现房颤，随着年龄增长发生率成倍增加。其中无器质性心脏病患者占3%-11%。若风险显示为高，应尽快前往医院进行专业检查。</string>
    <string name="title_activity_questionnaire_survey">questionnaireSurvey</string>
    <string name="HAMA_anxiety1">1．焦虑心境：担心、担忧，感到有最坏的事将要发生，容易激惹</string>
    <string name="HAMA_anxiety10">10．呼吸系统症状：胸闷、窒息感、叹息、呼吸困难</string>
    <string name="HAMA_anxiety11">11．胃肠道症状：吞咽困难、嗳气、消化不良（进食后腹痛、腹胀、恶心、胃部饱感）、肠动感、肠鸣、腹泻、体重减轻、便秘</string>
    <string name="HAMA_anxiety12">12. 生殖泌尿神经系统症状（genito-urinary symptoms）：尿意频数、尿急、停经、性冷淡、早泄、阳萎</string>
    <string name="HAMA_anxiety13">13. 植物神经系统症状：口干、潮红、苍白、易出汗、起鸡皮疙瘩、紧张性头痛、毛发竖起</string>
    <string name="HAMA_anxiety14">14.会谈时行为表现：（1）一般表现：紧张、不能松驰、忐忑不安，咬手指、紧紧握拳、摸弄手帕，面肌抽动、不宁顿足、手发抖、皱眉、表情僵硬、肌张力高，叹气样呼吸、面色苍白。（2）生理表现：吞咽、打呃、安静时心率快、呼吸快（20次/分以上）、腱反射亢进、震颤、瞳孔放大、眼睑跳动、易出汗、眼球突出</string>
    <string name="HAMA_anxiety2">2．紧张（tension）：紧张感、易疲劳、不能放松、情绪反应，易哭、颤抖、感到不安</string>
    <string name="HAMA_anxiety3">3．害怕（fears）：害怕黑暗、陌生人、一人独处、动物、乘车或旅行及人多的场合</string>
    <string name="HAMA_anxiety4">4.失眠（insomnia）：难以入睡、易醒、睡得不深、多梦、夜惊、醒后感疲倦</string>
    <string name="HAMA_anxiety5">5．认知功能（cognitive）：或称记忆、注意障碍，注意力不能集中，记忆力差</string>
    <string name="HAMA_anxiety6">6．抑郁心境：丧失兴趣、对以往爱好缺乏快感、抑郁、早醒、昼重夜轻</string>
    <string name="HAMA_anxiety7">7.躯体性焦虑：肌肉系统（somatic ansiety：muscuolar）：肌肉酸痛、活动不灵活、肌肉抽动、肢体抽动、牙齿打颤、声音发抖</string>
    <string name="HAMA_anxiety8">8.躯体性焦虑：感觉系统（Somatic anxiety：sensory）：视物模糊、发冷发热、软弱无力感、浑身刺痛</string>
    <string name="HAMA_anxiety9">9.心血管系统症状（cardiovascular-symptoms）：心动过速、心悸、胸痛、心管跳动感、昏倒感、心搏脱漏</string>
    <string name="PSQI_main">\u0009\u0009\u0009\u0009下面一些问题是关于您最近1个月的睡眠情况，请选择回填写最符合您近1个月实际情况的答案。请回答下列问题：</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>

    <string name="back">back</string>
    <string name="content">以下显示历史记录</string>
    <string name="estart">开始计步</string>

    <string name="life">西雅图生活质量</string>
    <string name="maohao">:</string>
    <string name="point">.</string>
    <string name="question_seattle1">1、过去的4周，由于胸痛、胸部紧榨感和心绞痛所致下列受限程度（其中1重度受限、2中度受限、3轻度受限、4稍受限、5不受限、6因其他原因受限）</string>
    <string name="question_seattle10">10、在您未来的生活中如果还有胸痛、胸部紧榨感和心绞痛的，你会感觉怎样（其中1不满意、2大部分不满意、3部分满意、4大部分满意、5高度满意）</string>
    <string name="question_seattle11">11、对心脏病发作和突然死亡的担心程度（其中1一直担心、2经常担心、3有时担心、4很少担心、5绝不担心）</string>
    <string name="question_seattle2">2、过去4周内，做最大强度的活动时，胸痛、胸部紧榨感和心绞痛的发作情况（其中1明显增加、2轻微增加、3相同、4轻微减少、5明显减少）</string>
    <string name="question_seattle3">3、过去4周内，胸痛、胸部紧榨感和心绞痛的平均发作次数（其中1为≥4次/天、2为1–3次/天、3为≥3次/周、4为1–2次/周、5为＜1次/周、6为无发作）</string>
    <string name="question_seattle4">4、过去4周内，胸痛、胸部紧榨感和心绞痛服用硝基药物（如硝酸甘油）平均次数（其中1为≥4次/天、2为1–3次/天、3为≥3次/周、4为1–2次/周、5为＜1次/周、6没使用）</string>
    <string name="question_seattle5">5、因胸痛、胸部紧榨感和心绞痛遵守医嘱服药带来的烦恼（其中1严重、2为中度、3轻微、4极少、5无、6医生未给药）</string>
    <string name="question_seattle6">6、对胸痛、胸部紧榨感和心绞痛各种措施的满意程度（其中1不满意、2大部分不满意、3部分满意、4大部分满意、5高度满意）</string>
    <string name="question_seattle7">7、对医生胸痛、胸部紧榨感和心绞痛的解释满意程度（其中1不满意、2大部分不满意、3部分满意、4大部分满意、5高度满意）</string>
    <string name="question_seattle8">8、总的来说，对胸痛、胸部紧榨感和心绞痛的治疗满意程度（其中1不满意、2大部分不满意、3部分满意、4大部分满意、5高度满意）</string>
    <string name="question_seattle9">9、过去4周内，胸痛、胸部紧榨感和心绞痛影响生活乐趣的程度（其中1不满意、2大部分不满意、3部分满意、4大部分满意、5高度满意）</string>
    <string name="questionnaire_main_pager">一般情况统计问卷</string>
    <string name="self1">1、头痛</string>
    <string name="self10">10、担心自己的衣饰整齐及仪态的端庄</string>
    <string name="self11">11、容易烦恼和激动</string>
    <string name="self12">12、胸痛</string>
    <string name="self13">13、害怕空旷的场所或街道</string>
    <string name="self14">14、感到自己精力下降，活动减慢</string>
    <string name="self15">15、想结束自己的生命</string>
    <string name="self16">16、听到旁人听不到声音</string>
    <string name="self17">17、发抖</string>
    <string name="self18">18、感到大多数人都不可信任</string>
    <string name="self19">19、胃口不好</string>
    <string name="self2">2. 神经过敏，心中不踏实</string>
    <string name="self20">20、容易哭泣</string>
    <string name="self21">21、同异性相处时感到害羞不自在</string>
    <string name="self22">22、感到受骗，中了圈套或有人想抓你</string>
    <string name="self23">23、无缘无故的感觉到害怕</string>
    <string name="self24">24、自己不能控制的大发脾气</string>
    <string name="self25">25、怕单独出门</string>
    <string name="self26">26、经常责怪自己</string>
    <string name="self27">27、腰痛</string>
    <string name="self28">28、感到难以完成任务</string>
    <string name="self29">29、感到孤独</string>
    <string name="self3">3.头脑中有不必要的想法或字句盘旋</string>
    <string name="self30">30、感到苦闷</string>
    <string name="self31">31、过分担忧</string>
    <string name="self32">32、对事物不感兴趣</string>
    <string name="self33">33、感到害怕</string>
    <string name="self34">34、你的感情容易受到伤害</string>
    <string name="self35">35、旁人能知道你的私下想法</string>
    <string name="self36">36、感到别人不理解你不同情你</string>
    <string name="self37">37、感到人们对你不友好，不喜欢你</string>
    <string name="self38">38、做事情必须做得很慢以保证做正确</string>
    <string name="self39">39、心跳得厉害</string>
    <string name="self4">4、头晕或昏倒</string>
    <string name="self40">40、恶心或胃不舒服</string>
    <string name="self41">41、感到比不上别人</string>
    <string name="self42">42、肌肉酸痛</string>
    <string name="self43">43、感到有人在监视你谈论你</string>
    <string name="self44">44、难以入睡</string>
    <string name="self45">45、做事必须反复检查</string>
    <string name="self46">46、难以做出决定</string>
    <string name="self47">47、怕乘电车、公共汽车、地铁或火车</string>
    <string name="self48">48、呼吸困难</string>
    <string name="self49">49、一阵阵发冷或发热</string>
    <string name="self5">5、对异性的兴趣减退</string>
    <string name="self50">50、因为感到害怕而避开某些东西、场合或活动</string>
    <string name="self51">51、脑子变空了</string>
    <string name="self52">52、身体发麻或刺痛</string>
    <string name="self53">53、喉咙有梗塞感</string>
    <string name="self54">54、感到前途没有希望</string>
    <string name="self55">55、不能集中注意力</string>
    <string name="self56">56、感到身体的某一部分软弱无力</string>
    <string name="self57">57、感到紧张或容易紧张</string>
    <string name="self58">58、感到手或脚发重</string>
    <string name="self59">59、感到死亡的事</string>
    <string name="self6">6、对旁人责备求全</string>
    <string name="self60">60、吃得太多</string>
    <string name="self61">61、当别人看着你或谈论你时感到不自在</string>
    <string name="self62">62、有一些属于你自己的看法</string>
    <string name="self63">63、有想打人或伤害他人的冲动</string>
    <string name="self64">64、醒得太早</string>
    <string name="self65">65、必须反复洗手、点数目或触摸某些东西</string>
    <string name="self66">66、睡得不稳不深</string>
    <string name="self67">67、有想摔坏或破坏东西的冲动</string>
    <string name="self68">68、有一些别人没有的想法或念头</string>
    <string name="self69">69、感到对别人神经过敏</string>
    <string name="self7">7、感到别人能控制你的思想</string>
    <string name="self70">70、在商场或电影院等人多的地方感到不自在</string>
    <string name="self71">71、感到任何事情都很困难</string>
    <string name="self72">72、一阵阵恐惧或惊恐</string>
    <string name="self73">73、感到在公共场合吃东西很不舒服</string>
    <string name="self74">74、经常与人争论</string>
    <string name="self75">75、单独一个人时神经很紧张</string>
    <string name="self76">76、别人对你的成绩没有做出恰当的评论</string>
    <string name="self77">77、即使和别人在一起也感到孤独</string>
    <string name="self78">78、感到坐立不安心神不定</string>
    <string name="self79">79、感到自己没有什么价值</string>
    <string name="self8">8、责怪别人制造麻烦</string>
    <string name="self80">80、感到熟悉的东西变陌生或不象真的</string>
    <string name="self81">81、大叫或摔东西</string>
    <string name="self82">82、害怕会在公共场合昏倒</string>
    <string name="self83">83、感到别人想占你便宜</string>
    <string name="self84">84、为一些有关“性”的想法而苦恼</string>
    <string name="self85">85、你认为应该因为自己的过错而受惩罚</string>
    <string name="self86">86、感到要赶快把事情做完</string>
    <string name="self87">87、感到自己的身体有严重问题</string>
    <string name="self88">88、从未感到和其他人亲近</string>
    <string name="self89">89、感到自己有罪</string>
    <string name="self9">9、忘记性大</string>
    <string name="self90">90、感到自己的脑子有毛病</string>
    <string name="self_anxiety_main">当您遇到以下情况，根据实际情况做出选择，系统将对您的焦虑情况进行量化评级</string>
    <string name="self_anxiety_question1">1.我觉得比平时容易紧张或着急</string>
    <string name="self_anxiety_question10">10.我觉得心跳得很快</string>
    <string name="self_anxiety_question11">11.我因为一阵阵头晕而苦恼</string>
    <string name="self_anxiety_question12">12.我有晕倒发作，或觉得要晕倒似的</string>
    <string name="self_anxiety_question13">13.我吸气呼气都感到很容易</string>
    <string name="self_anxiety_question14">14.我的手脚麻木和刺痛</string>
    <string name="self_anxiety_question15">15.我因为胃痛和消化不良而苦恼</string>
    <string name="self_anxiety_question16">16.我常常要小便</string>
    <string name="self_anxiety_question17">17.我的手脚常常是干燥温暖的</string>
    <string name="self_anxiety_question18">18.我脸红发热</string>
    <string name="self_anxiety_question19">19.我容易入睡并且一夜睡得很好</string>
    <string name="self_anxiety_question2">2.我无缘无故在感到害怕</string>
    <string name="self_anxiety_question20">20.我做噩梦</string>
    <string name="self_anxiety_question3">3.我容易心里烦乱或感到惊恐</string>
    <string name="self_anxiety_question4">4.我觉得我可能将要发疯</string>
    <string name="self_anxiety_question5">5.我觉得一切都很好</string>
    <string name="self_anxiety_question6">6.我手脚发抖打颤</string>
    <string name="self_anxiety_question7">7.我因为头疼、颈痛和背痛而苦恼</string>
    <string name="self_anxiety_question8">8.我觉得容易衰弱和疲乏</string>
    <string name="self_anxiety_question9">9.我觉得心平气和，并且容易安静坐着</string>
    <string name="title_notification_bar">当前步数:%1$s</string>
</resources>
